- wxWave class; use wxSound instead
- The wxHIDE_READONLY flag for wxFileDialog was not implemented
  and has now been removed
- wxTaskBarIcon::OnXXX() virtual methods: use events instead


OTHER CHANGES
=============

2.5.3
-----

All:

- number of fixes to wxPluginManager (Rick Brice, Hans Van Leemputten)
- fixed memory leak in wxURL when using a proxy (Steven Van Ingelgem)

All (GUI):

- added wxTaskBarIcon::CreatePopupMenu which is now recommended way
  of showing popup menu; calling wxTaskBarIcon::PopupMenu directly
  is discouraged
- Added ..._CMD_... variants for wxGrid event table entry macros
  taking window identifiers
- Added wxWindowBase::Navigate for programmatic navigation to the next
  control.
- On most platforms, wxTextCtrl::OnChar now inserts a tab character if
  wxTE_PROCESS_TAB is set, or navigates to the next control if not.

Unix:

- wxTaskBarIcon now supports freedesktop.org System Tray protocol
- security fixes to wxSingleInstanceChecker

wxGTK:

- fixed many rendering artifacts and wrong colours with lots of GTK+ themes
- implemented wxColourDialog as native dialog
- wxTreeCtrl::GetCount() counts root as well now (compatible with MSW)

wxMotif:

- added 3 state checkbox

wxWinCE:

- added automatized but customizable handling of native SmartPhone menus


2.5.2
-----

All:

- Hindi translation added (Dhananjaya Sharma)
- Brazilian Portuguese translation added (E. A. Tacao)
- wxDynamicCast() now uses static_cast<wxObject *> internally and so using it
  with anything not deriving from wxObject will fail at compile time (instead
  of run-time) now
- when wxUSE_STL == 1 and STL provides quasi-standard hash_map/hash_set,
  wxHashMap/wxHashSet are just typedefs for them. This makes impossible
  to forward declare these classes.

All (GUI):

- wxHtmlWindow now delays image scaling until rendering,
  resulting in much better display of scaled images
- Added UpdateSize to wxSplitterWindow to allow layout while hidden